--- a/env.example
+++ b/env.example
@@ -1,7 +1,13 @@
 # GigaChat API Configuration
-REACT_APP_GIGACHAT_API_KEY=your-gigachat-api-key-here
+VITE_GIGACHAT_CLIENT_ID=your-client-id-here
+VITE_GIGACHAT_CLIENT_SECRET=your-client-secret-here
+VITE_GIGACHAT_AUTH_TOKEN=your-auth-token-here
+VITE_GIGACHAT_SCOPE=GIGACHAT_API_PERS
+
+# GigaChat API Endpoints
+VITE_GIGACHAT_AUTH_URL=https://ngw.devices.sberbank.ru:9443/api/v2/oauth
+VITE_GIGACHAT_API_URL=https://gigachat.devices.sberbank.ru/api/v1
 
 # Application Configuration
-REACT_APP_API_BASE_URL=https://gigachat.devices.sberbank.ru/api/v1
-REACT_APP_APP_NAME=English Learning Assistant
-REACT_APP_VERSION=1.0.0
+VITE_APP_NAME=English Learning Assistant
+VITE_APP_VERSION=1.0.0
